--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/memorammstein/anzen-frontend-challenge/issues"
   },
-  "homepage": "https://github.com/memorammstein/anzen-frontend-challenge#readme"
+  "homepage": "https://github.com/memorammstein/anzen-frontend-challenge#readme",
+  "devDependencies": {
+    "bulma": "^0.9.4",
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
