--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "anzen-frontend-challenge",
   "version": "0.0.1",
   "description": "Frontend challenge for Anzen",
-  "main": "index.js",
   "scripts": {
+    "build": "webpack --mode production",
+    "start": "webpack serve --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,7 +12,6 @@
     "url": "git+https://github.com/memorammstein/anzen-frontend-challenge.git"
   },
   "author": "Guillermo Jimenez",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/memorammstein/anzen-frontend-challenge/issues"
   },
@@ -19,11 +19,14 @@
   "devDependencies": {
     "bulma": "^0.9.4",
     "css-loader": "^6.8.1",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
