--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/memorammstein/anzen-frontend-challenge#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "bulma": "^0.9.4",
     "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
