--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "homepage": "https://github.com/memorammstein/anzen-frontend-challenge#readme",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "autoprefixer": "^10.4.16",
     "bulma": "^0.9.4",
     "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
